@@ -6,6 +6,7 @@ DLLWRAP=dllwrap -mno-cygwin -mms-bitfields --target i386-mingw32 --export-all-sy
 GLUE_OBJS = \
 	attribute.c	\
         layoutline.o	\
+	units.o		\
 	win32dll.o
 
 all: pangosharpglue-2.dll
