@@ -1,0 +1,39 @@
+/* units.c : Glue to access unit macros.
+ *
+ * Author: Mike Kestner  <mkestner@novell.com>
+ *
+ * Copyright (c) 2005 Novell, Inc.
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of version 2 of the Lesser GNU General 
+ * Public License as published by the Free Software Foundation.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this program; if not, write to the
+ * Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+ * Boston, MA 02111-1307, USA.
+ */
+
+#include <pango/pango.h>
+
+/* Forward declarations */
+int pangosharp_scale (void);
+int pangosharp_pixels (int units);
+/* */
+
+gint 
+pangosharp_scale ()
+{
+	return PANGO_SCALE;
+}
+
+gint 
+pangosharp_pixels (gint units)
+{
+	return PANGO_PIXELS (units);
+}
