@@ -1,3 +1,12 @@
+2005-05-11  Mike Kestner  <mkestner@novell.com>
+
+	* pango/Makefile.am : add file.
+	* pango/Units.cs : new class to wrap PANGO_SCALE and PANGO_PIXELS.
+	* pango/glue/units.c : accessors for the macros.
+	* pango/glue/Makefile.am : build it.
+	* pango/glue/makefile.win32 : build it on win.
+	[Fixes #74837]
+
 2005-05-11  Eric Butler  <eric@extremeboredom.net>
 
 	* gtk/Gtk.metadata : add IEnumerable iface to ListStore.
